[package]
name = "twitter_streaming"
version = "0.1.0"
authors = ["Maximilian von Gaisberg <git@vongaisberg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
twitter-stream = "0.13"
serde_json = "1.0"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["async-std-runtime"]